# RewardScreen.gd
# çå‹µçµç®—ç•«é¢
extends Control

# ==================== å¼•ç”¨ ====================
@onready var title_label = $CenterContainer/RewardPanel/MarginContainer/VBoxContainer/TitleLabel
@onready var gold_value = $CenterContainer/RewardPanel/MarginContainer/VBoxContainer/RewardsContainer/GoldContainer/GoldValue
@onready var exp_value = $CenterContainer/RewardPanel/MarginContainer/VBoxContainer/RewardsContainer/ExpContainer/ExpValue
@onready var card_container = $CenterContainer/RewardPanel/MarginContainer/VBoxContainer/CardContainer
@onready var cards_label = $CenterContainer/RewardPanel/MarginContainer/VBoxContainer/CardsLabel
@onready var continue_button = $CenterContainer/RewardPanel/MarginContainer/VBoxContainer/ButtonContainer/ContinueButton
@onready var return_button = $CenterContainer/RewardPanel/MarginContainer/VBoxContainer/ButtonContainer/ReturnButton

# ==================== é è£½é«” ====================
var reward_card_scene = preload("res://scenes/inventory/InventorySlot.tscn")

# ==================== è³‡æ–™ ====================
var rewards_data: Dictionary = {}
var victory: bool = true

# ==================== åˆå§‹åŒ– ====================

func _ready():
	print("ğŸ† çå‹µçµç®—ç•«é¢è¼‰å…¥")
	
	# é€£æ¥æŒ‰éˆ•
	continue_button.pressed.connect(_on_continue_pressed)
	return_button.pressed.connect(_on_return_pressed)
	
	# âœ… ä¿®æ­£ï¼š
	# ç›´æ¥å¾ GameManager ç²å–å±¬æ€§ã€‚
	# é€™å…©å€‹å±¬æ€§åœ¨ GameManager.gd (Source 351) ä¸­æœ‰è¢«å®šç¾©ï¼Œæ‰€ä»¥æ°¸é å­˜åœ¨ã€‚
	# BattleManager (Source 332) æœƒåœ¨æˆ°é¬¥çµæŸæ™‚ (ç„¡è«–å‹æ•—) è² è²¬å¡«å…¥æ­£ç¢ºçš„è³‡æ–™ã€‚
	rewards_data = GameManager.battle_rewards
	victory = GameManager.battle_victory
	
	# é¡¯ç¤ºçå‹µ
	display_rewards()
	
	# æ’­æ”¾å…¥å ´å‹•ç•«
	play_entrance_animation()

# ==================== é¡¯ç¤ºçå‹µ ====================

func display_rewards():
	"""é¡¯ç¤ºçå‹µè³‡è¨Š"""
	# è¨­å®šæ¨™é¡Œ
	if victory:
		title_label.text = "ğŸ‰ æˆ°é¬¥å‹åˆ©ï¼"
		title_label.add_theme_color_override("font_color", Color(1, 0.9, 0.3))
	else:
		title_label.text = "ğŸ’€ æˆ°é¬¥å¤±æ•—..."
		title_label.add_theme_color_override("font_color", Color(0.8, 0.3, 0.3))
	
	# é¡¯ç¤ºé‡‘å¹£
	var gold = rewards_data.get("gold", 0)
	gold_value.text = "+%d" % gold
	
	# é¡¯ç¤ºç¶“é©—
	var experience = rewards_data.get("exp", 0)
	exp_value.text = "+%d" % experience
	
	# é¡¯ç¤ºå¡ç‰‡
	var cards = rewards_data.get("cards", [])
	if cards.is_empty():
		cards_label.text = "ğŸ´ æ²’æœ‰å¡ç‰‡æ‰è½"
		cards_label.add_theme_color_override("font_color", Color(0.6, 0.6, 0.6))
	else:
		cards_label.text = "ğŸ´ ç²å¾—å¡ç‰‡ï¼š"
		create_reward_cards(cards)

func create_reward_cards(card_ids: Array):
	"""å‰µå»ºçå‹µå¡ç‰‡é¡¯ç¤º"""
	# æ¸…ç©ºèˆŠå¡ç‰‡
	for child in card_container.get_children():
		child.queue_free()
	
	# å‰µå»ºå¡ç‰‡
	for card_id in card_ids:
		var card_slot = reward_card_scene.instantiate()
		card_container.add_child(card_slot)
		card_slot.setup(card_id)
		
		# æ’­æ”¾å¡ç‰‡å½ˆå‡ºå‹•ç•«
		card_slot.scale = Vector2.ZERO
		var tween = create_tween()
		tween.set_trans(Tween.TRANS_BACK)
		tween.set_ease(Tween.EASE_OUT)
		tween.tween_property(card_slot, "scale", Vector2.ONE, 0.5)
		
		# å»¶é²æ’­æ”¾å‹•ç•«
		await get_tree().create_timer(0.2).timeout

# ==================== å‹•ç•« ====================

func play_entrance_animation():
	"""æ’­æ”¾å…¥å ´å‹•ç•«"""
	var panel = $CenterContainer/RewardPanel
	
	# åˆå§‹ç‹€æ…‹
	panel.modulate.a = 0
	panel.scale = Vector2(0.5, 0.5)
	
	# æ·¡å…¥ + æ”¾å¤§
	var tween = create_tween()
	tween.set_parallel(true)
	tween.set_trans(Tween.TRANS_BACK)
	tween.set_ease(Tween.EASE_OUT)
	
	tween.tween_property(panel, "modulate:a", 1.0, 0.5)
	tween.tween_property(panel, "scale", Vector2(1.0, 1.0), 0.5)

# ==================== æŒ‰éˆ•å›èª¿ ====================

func _on_continue_pressed():
	"""ç¹¼çºŒå†’éšªæŒ‰éˆ•"""
	print("â–¶ï¸ ç¹¼çºŒå†’éšª")
	
	# è¿”å›é—œå¡é¸æ“‡
	GameManager.goto_stage_select()

func _on_return_pressed():
	"""è¿”å›ä¸»é¸å–®æŒ‰éˆ•"""
	print("ğŸ  è¿”å›ä¸»é¸å–®")
	GameManager.goto_main_menu()
